# StrainTool

./: .gitignore  .travis.yml  .zenodo.json  LICENSE  README.md  description.txt  index.html  pyproject.toml  readme.md  straindoc.js  test_progs.md
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
StrainWebTool/: run.py
StrainWebTool/app/: hello.py
StrainWebTool/doc/: env.
StrainWebTool/tmp/: input.txt.tmp  invalid-input.txt.tmp
data/: alps.vel  station_info.dat.ref  strain_info.dat.ref
data/valdata/: .midas2strinp.py  .run_refdata.sh  midas.full  midas.readme.txt  midas.vel  midas001.vel  midas001_old  midas002.vel  midas003.vel  midas004.vel  midas2strinp.py  refdata.7z  run_tests.sh  runtests.py
doc/: lweights.md  readme.html  readme.md  strain_parameters_table  test_progs.md  weights.html
for/: CNRS_midas.vel  a.out  make.sh  midas.vel  strain.out  velh.cmm4  visr.drv  visr.f  visr_core.f  voronoi_area_version.f90
plot/: default-param  default-param.asp  default-param.corinth  default-param.midas002  default-param.midas003  default-param.midas004  gmtstatsplot.sh  gmtstrainplot.sh  plotall.sh  plotall_d.sh  plotall_dveis.sh
pystrain/: grid.py  setup.py  strain.py  strain_info.dat.def  strain_info.dat1
pystrain/geodesy/: crdtrans.py
pystrain/pystrain/: Makefile  conf.py  grid.py  station.py  (+2 more)
src/: readme.
test/: delauney.py  haversine.py  lweights_test.py  obsolete_StrainTensor.py  requirements.txt  zweights_test.py
(+60 files in other folders)
